--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Rosenbelle Ganan'
+  github_nickname: 'rosenbelle'
+- name: 'Jianting Zhang'
+  github_nickname: 'JiantingZhang'
